@@ -33,6 +33,7 @@ class sfDoctrineBuildAllReloadTestAllTask extends sfDoctrineBaseTask
       new sfCommandOption('env', null, sfCommandOption::PARAMETER_REQUIRED, 'The environment', 'dev'),
       new sfCommandOption('append', null, sfCommandOption::PARAMETER_NONE, 'Don\'t delete current data in the database'),
       new sfCommandOption('dir', null, sfCommandOption::PARAMETER_REQUIRED | sfCommandOption::IS_ARRAY, 'The directories to look for fixtures'),
+      new sfCommandOption('migrate', null, sfCommandOption::PARAMETER_NONE, 'Migrate instead of reset the database'),
       new sfCommandOption('force', null, sfCommandOption::PARAMETER_NONE, 'Whether to force dropping of the database'),
     ));
 
@@ -57,6 +58,11 @@ The task is equivalent to:
 
 The task takes an application argument because of the [doctrine:data-load|COMMENT]
 task. See [doctrine:data-load|COMMENT] help page for more information.
+
+Include the [--migrate|COMMENT] option if you would like to run your project's
+migrations rather than inserting the Doctrine SQL.
+
+  [./symfony doctrine:build-all-reload-test-all --migrate|INFO]
 EOF;
   }
 
@@ -85,6 +91,10 @@ EOF;
     if (isset($options['no-confirmation']) && $options['no-confirmation'])
     {
       $buildAllReloadOptions[] = '--no-confirmation';
+    }
+    if (isset($options['migrate']) && $options['migrate'])
+    {
+      $buildAllReloadOptions[] = '--migrate';
     }
     $ret = $buildAllReload->run(array(), $buildAllReloadOptions);
 
